# docs-packer

./: .gitlab-ci.yml  LICENSE  README.md  Taskfile.yml  blueprint-contributing.md  blueprint-readme.md  common.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  variables.json
.config/: package-lock.json
.config/taskfiles/common/: Taskfile-update.yml
.config/taskfiles/install/: Taskfile.yml
contributing/: code-of-conduct.md  formatting.md  getting-started.md  header.md  overview.md  philosophy.md  pull-requests.md  testing.md
local/: package-lock.json
local/slim/: exe.txt  install.txt
readme/: contributing-details.md  creating-box.md  header.md  license.md  overview.md  quick-description.md  quick-start.md  requirements.md  subheader.md  updating.md
